app/app-b/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b-deployment
  namespace: test
  labels:
    app: app-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
      - name: app-b
        image: app-b:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-b-service
  namespace: test
  labels:
    app: test-app
spec:
  selector:
    app: app-b 
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 80
